--- a/stuff/04.05.21/index.html
+++ b/stuff/04.05.21/index.html
@@ -6,19 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-    <!-- 
-    <div id="a">
-        <p>Table 1</p>
-    </div>
-    <div id="b">
-        <p>Table 2</p>
-    </div>
--->
-    <script src="js/main.js"></script>
+    <script src="js/book.js">    </script>
+    <script src="js/storage.js"></script>
+    <script src="js/main.js">    </script>
+
 </body>
 
 </html>
